fixed results button and wrapping formatting

--- a/index.css
+++ b/index.css
@@ -75,7 +75,7 @@ button:hover {
 }
 
 /* Style the result area */
-#citationResult {
+#citationResult {   
     margin-top: 20px;
     padding: 10px;
     border: 1px solid #ddd;
@@ -84,11 +84,11 @@ button:hover {
 }
 
 /* Style the paragraph within the result area */
-#citationResult p {
+/* #citationResult p {
     text-align: left;
     margin: 0;
     color: #333;
-}
+} */
 
 .grid-container {
     display: grid;
@@ -101,8 +101,21 @@ button:hover {
     padding:0;
 }
 
-#citationResult , #copyButton {
-    display:inline-block;
+.resultsgrid {
+    display: grid;
+    grid-template-columns: 90% 10%;
+    grid-gap: 5px;
+    /* padding: 8px; */
+}
+
+.citationClass {
+    margin: 0;
+    text-align: left;
+    color: #333;
+}
+
+.copybutton {
+    margin-top: 20px;
 }
 
 
